# pico_template

./: .gitignore  .gitmodules  BoardType.h  CMakeLists.txt  compile  compose.yml  main.cpp
